@@ -50,6 +50,9 @@
     <junit.version>4.13.2</junit.version>
     <slf4j.version>1.7.32</slf4j.version>
 
+    <!-- surefire plugin openjdk18 -->
+    <argLine>--add-modules jdk.incubator.foreign --add-exports java.base/jdk.internal.misc=ALL-UNNAMED --add-opens java.base/jdk.internal.util=ALL-UNNAMED</argLine>
+
   </properties>
 
   <dependencies>
@@ -77,6 +80,7 @@
 
     <pluginManagement>
       <plugins>
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
@@ -94,9 +98,39 @@
             </compilerArgs>
           </configuration>
         </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.22.2</version>
+          <configuration>
+            <systemPropertyVariables>
+              <jacoco-agent.destfile>target/jacoco.exec</jacoco-agent.destfile>
+            </systemPropertyVariables>
+            <useSystemClassLoader>true</useSystemClassLoader>
+            <useManifestOnlyJar>false</useManifestOnlyJar>
+            <!-- https://github.com/junit-team/junit5/issues/1377 -->
+            <excludes>
+              <exclude/>
+            </excludes>
+            <includes>
+              <include>dk.ku.di.dms.vms.modb.common.memory</include>
+            </includes>
+          </configuration>
+        </plugin>
+
       </plugins>
+
     </pluginManagement>
   </build>
 
+  <developers>
+    <developer>
+      <id>rodrigolaigner</id>
+      <name>Rodigo Laigner</name>
+      <url>https://github.com/rnlaigner</url>
+      <email>rnl@di.ku.dk</email>
+    </developer>
+  </developers>
 
 </project>
